@@ -9,13 +9,13 @@ import com.example.bookstore.mapper.UserMapper;
 import com.example.bookstore.model.Role;
 import com.example.bookstore.model.User;
 import com.example.bookstore.service.UserService;
-import java.util.Collections;
+import java.util.Set;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 
 @RequiredArgsConstructor
-@Component
+@Service
 public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
@@ -25,12 +25,12 @@ public class UserServiceImpl implements UserService {
     @Override
     public UserResponseDto register(UserRegistrationRequestDto request)
             throws RegistrationException {
-        if (userRepository.findByEmail(request.email()).isPresent()) {
+        if (userRepository.existsByEmail(request.email()).isPresent()) {
             throw new RegistrationException("User with this email already exists");
         }
         User user = userMapper.toUser(request);
         user.setPassword(passwordEncoder.encode(request.password()));
-        user.setRoles(Collections.singleton(roleRepository.findByName(Role.RoleName.ROLE_USER)));
+        user.setRoles(Set.of(roleRepository.findByName(Role.RoleName.ROLE_USER)));
         return userMapper.toUserResponseDto(userRepository.save(user));
     }
 }
